# studio-brightness

./: .gitignore  CMakeLists.txt  build.bat  readme.md  studio-brightness.rc
.github/workflows/: build-feature.yml  build-release.yml  build.yml
include/: hid.h  resource.h
src/: hid.cpp  main.cpp
